--- a/css/style.css
+++ b/css/style.css
@@ -582,9 +582,31 @@ a {
 	display: flex;
 	font-size: 12px;
 	letter-spacing: 0pt;
+
 }
 
+
 @media only screen and (max-width: 768px) {
+
+	.video-container {
+		overflow: hidden;
+		position: relative;
+		width:100%;
+	}
+	
+	.video-container::after {
+		padding-top: 56.25%;
+		display: block;
+		content: '';
+	}
+	
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 
 	.block{
 	width: 90px;
@@ -596,6 +618,26 @@ a {
   }
 
   @media only screen and (max-width: 400px) {
+
+	.video-container {
+		overflow: hidden;
+		position: relative;
+		width:100%;
+	}
+	
+	.video-container::after {
+		padding-top: 56.25%;
+		display: block;
+		content: '';
+	}
+	
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 
 	.block{
 	width: 75px;
