--- a/css/style.css
+++ b/css/style.css
@@ -383,9 +383,11 @@ img {
 	font-family: 'Dancing Script', cursive;
 	font-weight: bold;
 	font-style: normal;
-	font-size: 60px;
-	margin: 32px 0;
+	font-size: 65px;
+	margin: 30px 0;
 	color: #674ea7;
+	padding: 10px;
+
 }
 
 .title h2 {
@@ -540,7 +542,7 @@ body {
 	color: #564861;
 	text-align: center;
 	font-size: 16px;
-	margin: 24px;
+	margin: 20px;
 }
 
 .phone {
