--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ body {
 }
 
 .title {
-	margin-bottom: 40px;
+	margin-bottom: 10px;
 }
 
 #time {
@@ -750,3 +750,12 @@ a {
 	transform: translate3d(125px, 0, 0);
   }
   
+
+
+  body2 {
+	background: Lavender;
+	height: 2%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
