--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes fall {
+ @-webkit-keyframes fall {
 	0% {
 		opacity: 0.9;
 		top: 0
@@ -759,4 +759,57 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+  } 
+
+/* 
+  
+.wrapper {
+	display: grid;
+	grid-template-columns: repeat(3, 100%);
+	overflow: hidden;
+	scroll-behavior: smooth;
   }
+  .wrapper section {
+	width: 100%;
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(5, auto);
+	margin: 20px 0;
+  }
+  .wrapper section .item {
+	padding: 0 2px;
+	transition: 250ms all;
+  }
+  .wrapper section .item:hover {
+	margin: 0 40px;
+	transform: scale(1.2);
+  }
+  .wrapper section a {
+	position: absolute;
+	color: #fff;
+	text-decoration: none;
+	font-size: 6em;
+	background: black;
+	width: 80px;
+	padding: 20px;
+	text-align: center;
+	z-index: 1;
+  }
+  .wrapper section a:nth-of-type(1) {
+	top: 0;
+	bottom: 0;
+	left: 0;
+	background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+  }
+  .wrapper section a:nth-of-type(2) {
+	top: 0;
+	bottom: 0;
+	right: 0;
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+  }
+  
+  @media only screen and (max-width: 600px) {
+	a.arrow__btn {
+	  display: none;
+	}
+  } */ 
