--- a/css/style.css
+++ b/css/style.css
@@ -359,8 +359,14 @@ img {
 	height: auto;
 }
 
-@media (max-width:800px) {
+@media (max-width:900px) {
 	.imgi {
+		max-width: 30%;
+	}
+	.top-right-decoration {
+		max-width: 30%;
+	}
+	.top-left-decoration {
 		max-width: 30%;
 	}
 }
