--- a/css/style.css
+++ b/css/style.css
@@ -665,13 +665,13 @@ a {
  
 
 
-  body2 {
+  /* .body2 {
 	background: Lavender;
 	height: 2%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-  } 
+  }  */
 
 
   
